# ET44.py

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
examples/logger/: README.md  logger.py
examples/sweep/: README.md  requirements.txt  sweep.py
src/ET44/: __init__.py  instrument.py
src/et44/: __init__.py  channel.py  instrument.py
src/tests/: ET44_test.py  README.md  testconfig.py
tools/et44fwupdater/: Cargo.toml  Makefile
tools/et44fwupdater/src/: main.rs
tools/fwupdater/: Cargo.toml  Makefile  README.md  et44fwupdater.py
tools/fwupdater.py/: README.md
tools/fwupdater/images/: ET44_V6.00.2423.059.hex  ET44_V6.00.2522.079.hex  ET44_V6.00.2611.089.hex  readme.md  sha256.txt
tools/fwupdater/src/: main.rs
