[package]
name = "et44fwupdater"
version = "0.1.0"
edition = "2024"
authors = ["Philipp Pagel"]
description = "Firmware updater for ET44xx / ET45xx LCR meters"
license = "MIT"

[dependencies]
anyhow = "1.0"
serialport = "4.7"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
